# mammos

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.binder/: Dockerfile  environment.yml  postBuild  start
.github/: environment.yml
.github/workflows/: check-changelog.yml  documentation.yml  publish.yml  test.yml
changes/: 45.fixed.md  46.misc.md  47.added.md  49.changed.md  55.added.md  58.fixed.md  59.fixed.md  62.misc.md  63.added.md  64.misc.md  65.misc.md  85.misc.md  README.md
dev/: spindynamics.ipynb
dev/hard-magnet-ai-surrogate-model/: run.py  setup.py  submit.sh
docs/: Makefile
docs/source/: changelog.rst  conf.py  design.rst  index.rst  mammos_entity_role.py
docs/source/_static/css/: custom.css
docs/source/_static/js/: entity_tippy_click.js
docs/source/_templates/: notebook-badges.html
docs/source/api/: index.rst
docs/source/demonstrator/: index.rst
docs/source/examples/: index.rst  ruff.toml
docs/source/examples/workflows/: Linearisation.ipynb  Nd2Fe14B.ipynb  hysteresis.rst  sensor.ipynb
docs/source/images/overview/: Makefile  overview.puml
examples/: AI-surrogate-mode-hard-magnets.ipynb  AI-surrogate-model-hard-magnets.ipynb  Nd2Fe14B.ipynb  benchmark-hard-magnet.ipynb  dakota.rst  hard-magnet-ai-surrogate-model.ipynb  hard-magnet-material-exploration.ipynb  hard-magnet-tutorial.ipynb  index.rst  sensor.ipynb  spindynamics-temperature-dependent-parameters.ipynb  spindynamics.ipynb
examples/data/hard-magnet-ai-surrogate-model/: hystloop_extrinsic_properties.csv  pixi.toml  post-processing.ipynb  run.py  setup.py  submit.sh  temp-vs-extrinsic-properties.ipynb
examples/images/: hard_magnet.py  sensor.py
mammos/: smoke.py
src/mammos/: _fetch_examples.py
tests/: test_fetch_examples.py
