[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "mammos"
version = "0.1.1"
description = "A multiphyscis simulation suite for magnetic materials."
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Swapneel Amit Pathak" },
  { name = "Samuel Holt" },
  { name = "Martin Lang" },
  { name = "Hans Fangohr" },
]
requires-python = ">=3.11"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "mammos-analysis @ git+https://github.com/mammos-project/mammos-analysis.git",
  "mammos-dft @ git+https://github.com/mammos-project/mammos-dft.git",
  "mammos-entity @ git+https://github.com/mammos-project/mammos-entity.git",
  "mammos-mumag @ git+https://github.com/mammos-project/mammos-mumag.git",
  "mammos-spindynamics @ git+https://github.com/mammos-project/mammos-spindynamics.git",
  "mammos-units @ git+https://github.com/mammos-project/mammos-units.git",
]
urls.Changelog = "https://mammos-project.github.io/mammos/changelog"
urls.Documentation = "https://mammos-project.github.io/mammos"
urls.Homepage = "https://mammos-project.github.io"
urls.Issues = "https://github.com/MaMMoS-project/mammos/issues"
urls.Repository = "https://github.com/MaMMoS-project/mammos"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = [ "conda-forge" ]
platforms = [ "linux-64" ]

[tool.pixi.pypi-dependencies]
mammos = { path = ".", editable = true }

[tool.pixi.dependencies]
packaging = "<25"  # HACK: to make emmontopy happy
esys-escript = "*"
jupyter = "*"
nbsphinx = "*"
ipykernel = "*"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-design = "*"
sphinx-copybutton = "*"
pandoc = "*"
jupyterlab = "*"
ubermag = "=2024"
trame = "*"
bayesian-optimization = "*"

[tool.pixi.tasks]
examples = "jupyter lab docs/source/examples/workflows"
docs = "cd docs && make prepare && make html"
docs-clean = "cd docs && make clean"
